--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,8 @@
   author={Chang, Che and Huang, Tsung-Wei and Lin, Dian-Lun and Guo, Guannan and Lin, Shiju},
   booktitle={ACM/IEEE DAC}, 
   title={Ink: Efficient Incremental $k$-Critical Path Generation}, 
-  year={2024}
+  year={2024},
+  selected={true}
 }
 
 
