--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,19 @@
 ---
 ---
-@INPROCEEDINGS{ink-paper,
+@INPROCEEDINGS{ink,
   author={Chang, Che and Huang, Tsung-Wei and Lin, Dian-Lun and Guo, Guannan and Lin, Shiju},
   booktitle={ACM/IEEE DAC}, 
-  title={Ink: Efficient Incremental $k$-Critical Path Generation}, 
+  title={Ink: Efficient Incremental k-Critical Path Generation}, 
+  year={2024},
+  selected={true}
+}
+
+@INPROCEEDINGS{GPasta,
+  author={Zhang, Boyang and Lin, Dian-Lun and Chang, Che and Chiu, Cheng-Hsiang
+  and Wang, Bojue and Lee, Wan Luan and Chang, Chih-Chun and Fang, Donghao and
+  Huang, Tsung-Wei},
+  booktitle={ACM/IEEE DAC}, 
+  title={G-PASTA: GPU-Accelerated Partitioning Algorithm for Static Timing Analysis}, 
   year={2024},
   selected={true}
 }
