added ASPDAC25 publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 ---
 ---
+@INPROCEEDINGS{pathgen,
+  author={Chang, Che and Zhang, Boyang and Chiu, Cheng-Hsiang and Lin, Dian-Lun
+    and Chung, Yi-Hua and Lee, Wan-Luan and Guo, Zizheng and Lin, Yibo and
+      Huang, Tsung-Wei},
+  booktitle={ACM/IEEE ASP-DAC}, 
+  title={PathGen: An Efficient Parallel Critical Path Generation Algorithm}, 
+  year={2025},
+  selected={true}
+}
+
 @INPROCEEDINGS{ink,
   author={Chang, Che and Huang, Tsung-Wei and Lin, Dian-Lun and Guo, Guannan and Lin, Shiju},
   booktitle={ACM/IEEE DAC}, 
