--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,7 @@
 ---
 ---
 @INPROCEEDINGS{pathgen,
-  author={Chang, Che and Zhang, Boyang and Chiu, Cheng-Hsiang and Lin, Dian-Lun
-    and Chung, Yi-Hua and Lee, Wan-Luan and Guo, Zizheng and Lin, Yibo and
-      Huang, Tsung-Wei},
+  author={Chang, Che and Zhang, Boyang and Chiu, Cheng-Hsiang and Lin, Dian-Lun and Chung, Yi-Hua and Lee, Wan-Luan and Guo, Zizheng and Lin, Yibo and Huang, Tsung-Wei},
   booktitle={ACM/IEEE ASP-DAC}, 
   title={PathGen: An Efficient Parallel Critical Path Generation Algorithm}, 
   year={2025},
