updated news and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,16 @@
   selected={true}
 }
 
+@INPROCEEDINGS{ink-dynamic,
+  author={Chang, Che and Chiu, Cheng-Hsiang and Zhang, Boyang and Huang,
+    Tsung-Wei},
+  booktitle={IEEE ISVLSI}, 
+  title={Incremental Critical Path Generation for Dynamic Graphs}, 
+  year={2024},
+  selected={true}
+}
+
+
 @INPROCEEDINGS{ink,
   author={Chang, Che and Huang, Tsung-Wei and Lin, Dian-Lun and Guo, Guannan and Lin, Shiju},
   booktitle={ACM/IEEE DAC}, 
